--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ enableEmoji = true  # Shorthand emojis in content files - https://gohugo.io/func
 # disqusShortname = "yourdiscussshortname"
 
 [author]
-  name = "John Doe"
+  name = "Rie Mukai"
 
 [blackfriday]
   hrefTargetBlank = true
@@ -64,12 +64,12 @@ enableEmoji = true  # Shorthand emojis in content files - https://gohugo.io/func
 [menu]
 [[menu.main]]
 name = "Klavierunterricht"
-url = "posts/"
+url = "pages/klavierunterricht/"
 weight = 10
 
 [[menu.main]]
 name = "Biographie"
-url = "posts/"
+url = "pages/biographie/"
 weight = 11
 
 [[menu.main]]
@@ -78,8 +78,8 @@ url = "posts/"
 weight = 12
 
 [[menu.main]]
-name = "About"
-url = "about-hugo/"
+name = "Impressum"
+url = "pages/impressum/"
 weight = 50
 
 
