--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hermit"]
 	path = themes/hermit
 	url = https://github.com/Track3/hermit.git
+[submodule "themes/hermit_light"]
+	path = themes/hermit_light
+	url = git@github.com:jwergieluk/hermit.git
