--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://www.mukai.de/"
 languageCode = "de-de"
 title = "Rie Mukai"
-theme = "hermit"
+theme = "hermit_light"
 
 # enableGitInfo = true
 pygmentsCodefences  = true
@@ -10,7 +10,7 @@ pygmentsUseClasses  = true
 rssLimit = 10  # Maximum number of items in the RSS feed.
 copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License." # This message is only used by the RSS template.
 enableEmoji = true  # Shorthand emojis in content files - https://gohugo.io/functions/emojify/
-# googleAnalytics = "UA-123-45"
+googleAnalytics = "UA-26275875-1"
 # disqusShortname = "yourdiscussshortname"
 
 [author]
