--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/Track3/hermit.git
 [submodule "themes/hermit_light"]
 	path = themes/hermit_light
-	url = git@github.com:jwergieluk/hermit.git
+	url = https://github.com/jwergieluk/hermit.git
