--- a/config.toml
+++ b/config.toml
@@ -58,8 +58,8 @@ googleAnalytics = "UA-26275875-1"
     url = "https://instagram.com/"
 
   [[params.social]]
-    name = "github"
-    url = "https://github.com/"
+    name = "email"
+    url = "mailto:rie@mukai.de"
 
 [menu]
 [[menu.main]]
