--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://www.mukai.de/"
 languageCode = "de-de"
 title = "Rie Mukai"
-theme = "hermit_light"
+theme = "hermit"
 
 # enableGitInfo = true
 pygmentsCodefences  = true
